--- a/delay.html
+++ b/delay.html
@@ -1,7 +1,9 @@
 <html>
     <head>
         <script type="module">
-            await new Promise(resolve => setTimeout(resolve, 6000))
+            console.log("loading...")
+            await new Promise(resolve => setTimeout(resolve, 10000))
+            console.log("loaded!")
         </script>
     </head>
     <body>
